# matprisnu

./: .env.example  .gitignore  .isort.cfg  Makefile  README.md  matprisnu.code-workspace  pants.toml
.github/workflows/: pants.yaml
docker/: .env.example  docker-compose.yaml
matprisnu/src/python/: BUILD
matprisnu/src/python/data-models/: BUILD  README.md  pyproject.toml
matprisnu/src/python/data-models/src/data_models/: __init__.py
matprisnu/src/python/data_models/src/: BUILD
matprisnu/src/python/data_models/src/data_models/: scrappers.py
matprisnu/src/python/scrappers/: BUILD
matprisnu/src/python/scrappers/src/: BUILD
matprisnu/src/python/scrappers/src/scrappers/: common.py
src/python/data-ingestion/: BUILD  pyproject.toml
src/python/data-ingestion/notebooks/: product_schemas_analysis.ipynb
src/python/data-ingestion/resources/schemas/products/coop/: barn.json  brod-bageri.json  delikatesser.json  djurmat-tillbehor.json  dryck.json  fardigmat-mellanmal.json  fisk-skaldjur.json  frukt-gronsaker.json  frys.json  godis-glass-snacks.json  halsa-tillskott.json  hemmet.json  hushall.json  koket.json  kott-fagel-chark.json  kryddor-smaksattare.json  mejeri-agg.json  ost.json  skafferi.json  skonhet-hygien.json  tobak.json  vegetariskt.json
src/python/data-ingestion/resources/schemas/products/hemkop/: barn.json  blommor-och-tillbehor.json  chark-och-palagg.json  djur.json  dryck.json  fisk-och-skaldjur.json  fryst.json  godis-och-snacks.json  halsa-och-skonhet.json  hem-och-hushall.json  kiosk.json  kott-och-fagel.json  ovrigt.json  skafferi.json
src/python/data-ingestion/resources/schemas/products/willys/: blommor-och-tradgard.json  djur.json  frukt-och-gront.json  glass-godis-och-snacks.json  halsa-och-skonhet.json  hem-och-stad.json  kott-chark-och-fagel.json  mejeri-ost-och-agg.json  tobak.json
src/python/data-ingestion/resources/sql/: create_categories.sql  create_products.sql  create_stores.sql  create_tables.sql
src/python/data-ingestion/src/data_ingestion/: categories.py  cli.py  sql.py  stores.py  utils.py
src/python/data-ingestion/src/data_ingestion/products/: product.py  schemas.py
src/python/data-models/: BUILD  pyproject.toml
src/python/data-models/src/: BUILD  pyproject.toml
src/python/data-models/src/data_models/: BUILD  __init__.py  ingestion.py  scrappers.py
src/python/scrappers/: BUILD  pyproject.toml
src/python/scrappers/src/: BUILD  pyproject.toml
src/python/scrappers/src/scrappers/: __init__.py  cli.py  cli_v2.py  clis_v2.py  common.py  data_lake.py  logger.py  main.py  repositories.py  tasks.py  utils.py
src/python/scrappers/src/scrappers/axfood/: categories.py  products.py  stores.py
src/python/scrappers/src/scrappers/coop/: categories.py  products.py  stores.py
src/python/scrappers/src/scrappers/ica/: categories.py  products.py  stores.py
