[project]
name = "data-models"
version = "0.1.0"
description = "Data models for matprisnu"
authors = [
    {name = "Erik Dao", email = "cuong@neuraltalks.io"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "pydantic",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
